<resources>
    <string name="app_name">TipCalculator-Ramos</string>
    <string name="subtotal">Subtotal:</string>
    <string name="numPeople">Number of People:</string>
    <string name="invalidSubtotal">Invalid Subtotal</string>
    <string name="invalidNumPeople">Invalid Number of People</string>
    <string name="invalidTip">Invalid Tip</string>
    <string name="chooseTip">Choose Tip:</string>
    <string name="custom">Custom</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="numPeopleKey">numPeopleKey</string>
    <string name="subtotalKey">subtotalKey</string>
    <string name="tipValueKey">tipValueKey</string>
    <string name="totalKey">totalKey</string>
    <string name="paySplitKey">paySplitKey</string>
    <string name="tipCostKey">tipCostKey</string>
    <string name="txtAmountKey">txtAmountKey</string>
    <string name="txtPeopleKey">txtPeopleKey</string>
    <string name="txtTipCustomKey">txtTipCustomKey</string>
    <string name="tip15Toast">A 15% tip will be applied to your subtotal</string>
    <string name="tip20Toast">A 20% tip will be applied to your subtotal</string>
    <string name="tip25Toast">A 25% tip will be applied to your subtotal</string>
    <string name="tipCustomToast">Enter custom tip percentage</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="returnID">Return</string>
    <string name="calculations">Calculations</string>
    <string name="tipPercentApplied">Tip Percent Applied:</string>
    <string name="tipAmount">Tip Amount:</string>
    <string name="total">Total:</string>
    <string name="costPerPerson">Splitting? Each person pays:</string>
    <string name="one">1.00</string>
    <string name="hundred">100</string>
    <string name="zero">0</string>
    <string name="ten">10</string>
    <string name="val15">15.00</string>
    <string name="val20">20.00</string>
    <string name="val25">25.00</string>
    <string name="dollarSign">$</string>
    <string name="percentSign">%</string>
    <string name="enterPercent">Enter %</string>
    <string name="formatDecimal">%.2f</string>
    <string name="fifteenPercent">15%</string>
    <string name="twentyPercent">20%</string>
    <string name="twentyfivePercent">25%</string>
</resources>
