<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundBlue"
    tools:context="com.example.ricky52194.tipcalculator_ramos.MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <EditText
        android:id="@+id/txtAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightDP"
        android:layout_marginTop="@dimen/eightDP"
        android:ems="@string/ten"
        android:hint="@string/subtotal"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <EditText
        android:id="@+id/txtPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightDP"
        android:layout_marginEnd="@dimen/eightDP"
        android:layout_marginStart="@dimen/eightDP"
        android:layout_marginTop="@dimen/eightDP"
        android:ems="@string/ten"
        android:hint="@string/numPeople"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <EditText
        android:id="@+id/txtTipCustom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightDP"
        android:layout_marginTop="@dimen/eightDP"
        android:hint="@string/enterPercent"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />

    <TextView
        android:id="@+id/chooseTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightDP"
        android:layout_marginEnd="@dimen/eightDP"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="@dimen/eightDP"
        android:layout_marginTop="@dimen/eightDP"
        android:ems="@string/ten"
        android:inputType="none"
        android:text="@string/chooseTip"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginBottom="@dimen/sixteenDP"
        android:layout_marginEnd="@dimen/eightDP"
        android:layout_marginStart="@dimen/eightDP"
        android:layout_marginTop="@dimen/eightDP"
        android:background="@drawable/round_button_reset"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton"
        app:layout_constraintVertical_bias="0.791" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginBottom="@dimen/eightDP"
        android:layout_marginEnd="@dimen/eightDP"
        android:layout_marginStart="@dimen/eightDP"
        android:layout_marginTop="@dimen/eightDP"
        android:background="@drawable/round_button_calculate"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/eightDP"
        android:layout_marginEnd="@dimen/eightDP"
        android:layout_marginStart="@dimen/eightDP"
        android:layout_marginTop="@dimen/twoHundredTwelveDP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404">

        <RadioButton
            android:id="@+id/tip15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/fifteenPercent" />

        <RadioButton
            android:id="@+id/tip20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/twentyPercent" />

        <RadioButton
            android:id="@+id/tip25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/twentyfivePercent" />

        <RadioButton
            android:id="@+id/tipCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/custom" />


    </RadioGroup>


</android.support.constraint.ConstraintLayout>
